--- a/marketing/package.json
+++ b/marketing/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "container",
+  "name": "marketing",
   "version": "1.0.0",
   "scripts": {
-    "start": "webpack serve --config config/webpack.dev.js",
-    "build": "webpack --config config/webpack.prod.js"
+    "start": "webpack serve --config config/webpack.dev.js"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
